fixed issues with login,sign up, updating, etc

--- a/src/theme/styles/index.scss
+++ b/src/theme/styles/index.scss
@@ -36,6 +36,9 @@ nav {
             color: $color3;
             font-weight: 700;
         }
+        &.disabled {
+            cursor: not-allowed;
+        }
     }
 
     .button-logout {
